ndb - bug#16310   better error message for creating table with non-existing tablespace